bot actions view link model code changes

--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -178,7 +178,8 @@
   </div>
   <perfect-scrollbar class="perfect-scroll-modal-body">
     <div class="modal-body">
-        <div class="info-link-text">Choose any bot from the list to link it to your SearchAssist app.</div>
+      <div *ngIf="associatedBots && associatedBots.length">  
+      <div class="info-link-text">Choose any bot from the list to link it to your SearchAssist app.</div>
         <div class="kr-sg-input-text">          
           <input type="text"placeholder="Search" [(ngModel)]="searchAssociatedBots" name="searchAssociatedBots" class="input-text"> 
           <img class="search-icon" src="assets/images/search_gray.svg">        
@@ -209,6 +210,12 @@
             </div>
           </div>
           
+        </div>
+        </div>
+        <div *ngIf="!associatedBots || !associatedBots.length">
+            <div  class="">
+                No bot link data available
+           </div>
         </div>
     </div>
   </perfect-scrollbar>
