--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -411,7 +411,8 @@
                         display: flex;
                         align-items: center;
                         width: 100%;
-                        margin-bottom: 20px;
+                        margin-bottom: 10px;
+                        line-height: 34px;
                         justify-content: space-between;        
                         .tabs-sec{
                             .tabname{
@@ -443,8 +444,21 @@
                                     margin-right: 8px;
                                 }
                             }
+                            .search-block {
+                                color: #202124;
+                                font-style: normal;
+                                font-weight: 500;
+                                font-size: 12px;
+                                // margin-right: 30px;
+                                img {
+                                    margin-right: 7px;
+                                    cursor: pointer;
+                                    position: relative;
+                                    top: -1px;
+                                }
+                            } 
                             .kr-sg-input-search{
-                                width: 300px;
+                                width: 215px;
                                 margin-right: 30px;
                                 input{
                                     padding: 4px 10px 4px 32px;
@@ -464,6 +478,12 @@
                                     top: 9px;
                                     cursor: pointer;
                                     right: 0;                            
+                                }
+                                .close-icon {
+                                    position: absolute;
+                                    right: 11px;
+                                    top: 12px;
+                                    cursor: pointer;
                                 }
                             }
                         }                                      
