--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -591,7 +591,6 @@
                                         <span>{{selectedFaq._source.faqAltQuestions?.length>0?'('+selectedFaq._source.faqAltQuestions?.length+')':''}}</span>
                                         <!-- ({{(selectedFaq.alternateQuestions?selectedFaq.alternateQuestions.length:0)}}) -->
                                     </div>
-                                    <div class="que-desc text-truncate">Add alternate forms of the question.</div>
                                 </div>
                                 <!-- <div class="col-2 p-0 text-right">
                                     <button class="kr-sg-button-primary btn_lg" (click)="addAlternate()">Add</button>
@@ -601,7 +600,7 @@
                                 <app-add-alternate-question [faqServ]="faqServiceAlt"></app-add-alternate-question>
                             </div>
                             <ng-container *ngIf="selectedFaq._source.faqAltQuestions?.length">
-                            <div class="added-questions-list" *ngFor="let alternateQuestion of selectedFaq._source?.faqAltQuestions">
+                            <div class="added-questions-list py-0" *ngFor="let alternateQuestion of selectedFaq._source?.faqAltQuestions">
                                 <div class="content-body-question row" >
                                 <div class="col-12 group-name question-name text-truncate">{{alternateQuestion}}</div>
                                 </div>
