--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -351,7 +351,7 @@
             .status-identification-content{
                 width: 230px;
                 margin: 0 auto;
-                text-align: left;
+               // text-align: left;
             }
             .progressNote{
                 color: #202124;
