--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -217,7 +217,7 @@
               <div class="col_ col-2">
                 <span>{{source.recentStatus==='configured'?'--':source.numPages}}</span>
               </div>
-              <div class="col_ col-2" *ngIf="source.advanceSettings">
+              <div class="col_ col-2" *ngIf="source?.advanceSettings">
                 <span *ngIf="!source.advanceSettings.scheduleOpt" >{{source.jobInfo.userDetails.fullName || source.userDetails.fullName}}</span>
                 <span *ngIf="source.advanceSettings.scheduleOpt" >{{source.jobInfo.userDetails.fullName}}</span>
               </div>
@@ -455,7 +455,7 @@
                               <textarea class="wid min-ht" [(ngModel)] = "editConfObj.desc"></textarea>
                             </div>
                           </div>
-                          <div class="col_ col-2 text-truncate" >{{selectedSource.userDetails.firstName}}
+                          <div class="col_ col-2 text-truncate" >{{selectedSource?.userDetails?.firstName}}
                           </div>
                           <div class="col_ col-2 text-truncate" >{{selectedSource.lMod | date:'mediumDate'}}
                           </div>
@@ -501,12 +501,12 @@
                   <div class="row m-0 row_data">
                     <div class="col-10 title pl-pr-10">Schedule</div>
                     <div class="toggle-label col-2 pl-pr-10 text-right">
-                      <label *ngIf="selectedSource.advanceSettings" class="kr-sg-toggle">
+                      <label *ngIf="selectedSource?.advanceSettings" class="kr-sg-toggle">
                         <input type="checkbox" name="scheduleOpts"
                           [(ngModel)]="selectedSource.advanceSettings.scheduleOpt">
                         <div class="slider"></div>
                       </label>
-                      <label *ngIf="!selectedSource.advanceSettings" class="kr-sg-toggle">
+                      <label *ngIf="!selectedSource?.advanceSettings" class="kr-sg-toggle">
                         <input type="checkbox">
                         <div class="slider"></div>
                       </label>
@@ -516,7 +516,7 @@
                   <!-- <div class="schedule-comp" *ngIf="selectedSource.advanceSettings.scheduleOpt"> -->
                     <!-- *ngIf="selectedSource.advanceSettings.scheduleOpt"  -->
                     <div class="schedule-box">
-                      <app-scheduler [scheduleFlag] = "selectedSource.advanceSettings.scheduleOpt" [crwalObject]="selectedSource" [schedule]="'get'"
+                      <app-scheduler [scheduleFlag] = "selectedSource?.advanceSettings?.scheduleOpt" [crwalObject]="selectedSource" [schedule]="'get'"
                       (scheduleData)="scheduleData($event)" (cronExpress)="cronExpress($event)"></app-scheduler>
                     </div>
                     
@@ -608,7 +608,7 @@
                 </div>
               </div>
 
-              <div *ngIf="selectedSource.advanceSettings && !selectedSource.advanceSettings.crawlEverything">
+              <div *ngIf="selectedSource?.advanceSettings && !selectedSource?.advanceSettings?.crawlEverything">
                 
                 <div class="allow-urls-sec row allow-urlBox pl-0 pr-0"
                   *ngIf="selectedSource.advanceSettings && selectedSource.advanceSettings.blockedOpt">
