--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -466,7 +466,7 @@
                           </div>
                           <div class="col_ col-2 text-truncate" >{{selectedSource?.userDetails?.firstName}}
                           </div>
-                          <div class="col_ col-2 text-truncate" >{{selectedSource.lMod | date:'d MMM yyyy'}}
+                          <div class="col_ col-2 text-truncate" >{{selectedSource.lMod | date:'d MMMM yyyy'}}
                           </div>
                           <!--<div class="col_ col-2" >{{selectedSource.createdOn | dateFormatPipe: 'MM:DD:YYYY hh:mm A'}}
                           </div>
