--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -636,6 +636,7 @@
     }
     .docker-list{
        padding: 10px;
+       cursor: default;
         .row-content{
             // margin-bottom: 12px;
             padding: 0px 10px;
@@ -647,6 +648,9 @@
                 font-size: 12px;
                 line-height: 15px;
                 margin-bottom: 4px;
+                &.external_link{
+                    cursor: pointer;
+                }
             }
             .desc{
                 color: #9AA0A6;
