UAT sheet defects

--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -437,9 +437,9 @@
                         input{
                             background: #FFFFFF;
                             border: 1px solid #E4E5E7;
+                            padding: 4px 10px 4px 35px;
                             box-sizing: border-box;
                             border-radius: 4px;
-                            padding-left: 10px;
                             &:focus{
                                 border: 1px solid #1372ff;
                             }
