--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -239,6 +239,9 @@
                 .content-body{
                     padding: 9px 0;
                     border-bottom: 1px solid #E4E5E7;
+                    .col_{
+                        padding: 0px 10px 0px 25px;
+                    }
                     .col{
                         color: #202124;
                         font-size: 14px;
