--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -1,5 +1,8 @@
 <div class="manage-credentials-container">
 <ng-container  *ngIf="!(channnelConguired && channnelConguired.length) && loadingContent1"> 
+    <div class="header-sec col-12 row m-0">
+        <div class="col-4 p-0 title-header">Credentials</div>
+        </div>
     <perfect-scrollbar class="empty-scroll">
     <div  class="empty-landing-screen">
       <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()"src="assets/images/credentials-empty.svg"></div>
