--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -118,9 +118,10 @@
                         <img src="assets/icons/sidemenu/search.svg" (click)="focusinSearch()" (mouseover)="activeSearch=true" (mouseout)="activeSearch=false">
                     </div>
                     <div class="global-searc-container" *ngIf='showSearch'>
-                        <div class="kr-sg-input-search">     
-                            <input type="text" class="input-search" id="globalSearch"  [ngClass]="{'pl-2':searchText}" (focusout)="focusoutSearch();"  (keyup.enter)="triggerRoute(searchText)" autocomplete="off" [(ngModel)]="searchText" [ngbTypeahead]="search" [resultTemplate]="rt" [inputFormatter]="formatter" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')" (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'" autofocus>
-                            <!-- <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchText"> -->
+                        <div class="kr-sg-input-search">  
+    
+                            <input type="text" class="input-search" id="globalSearch"  searchImgSrc='assets/icons/search.svg' placeholder="Search" [ngClass]="{'pl-2':searchText}" (focusout)="focusoutSearch();"  (keyup.enter)="triggerRoute(searchText)" autocomplete="off" [(ngModel)]="searchText" [ngbTypeahead]="search" [resultTemplate]="rt" [inputFormatter]="formatter" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')" (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'" autofocus>
+                            <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchText">
                             <img class="close-icon" *ngIf="searchText" src="assets/icons/close_icon.svg"  [ngClass]="{'pr-22':searchText}" (click)="searchText='';showSearch=!showSearch;"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
                         </div>
                     </div>
