UAT Defect fixes

--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -816,7 +816,7 @@
                           </div>
                             <div class="actions-delete">                           
                                 <span class="actions-links d-none"><img class="action_icon" src="assets/icons/sidemenu/table-refresh.svg"></span>
-                                <span class="actions-links" (click)="deleteSource(source,$event)"  ngbTooltip='Delete'><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
+                                <span class="actions-links" (click)="deleteSource(source,$event)"  ngbTooltip='Delete' [container]="'body'"><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
                             </div>
                         </div>
                       </div>          
